@@ -1,6 +1,7 @@
 1.2.5 (not yet released):
 - Remove useless debugging messages.
 - Better handling of exceptions.
+- Fix various issues for the selection of OPKGs (patches from Olivier Lahaye).
 
 1.2.4:
 - Fix the Debian copyright.
